4 teensy bugs fixed: 1) body margin that has been haunting me, 2) allow unique usernames only, 3) confirm message prior to deletion, 4) inventory card description overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,3 +31,7 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: "Metamorphous", serif;
 }
+
+body {
+  margin: 0px;
+}
